exports[`Image Image component 1`] = `
<img
  alt="Image"
  height={undefined}
  src="/cool/image.png"
  width={undefined} />
`;

exports[`Image Image w/ custom alt text 1`] = `
<img
  alt="Alternate"
  height={undefined}
  src="/cool/image.png"
  width={undefined} />
`;

exports[`Image Image w/ height 1`] = `
<img
  alt="Image"
  height="50px"
  src="/cool/image.png"
  width={undefined} />
`;

exports[`Image Image w/ width 1`] = `
<img
  alt="Image"
  height={undefined}
  src="/cool/image.png"
  width="50px" />
`;
